input width fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- Mensajes se agregarán aquí -->
         </div>
         <div class="input-container">
-            <input type="text" id="user-input" placeholder="Escribe algo..." />
+            <input type="text" id="user-input" placeholder="Mensaje" />
             <button onclick="sendMessage()">Enviar</button>
         </div>
     </div>    
