--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
     <div class="chat-container">
+        <div class="banner">
+            <img class="banner_img" src="./profile.jpg" alt="Logo de Santa Fe Provincia">
+            <div>
+            <p>Asistente Virtual</p>
+            <p>Secretaría de Empleo y Desarrollo Emprendedor</p>
+        </div>
+        </div>
         <div class="chat-box" id="chat-box">
             <!-- Mensajes se agregarán aquí -->
         </div>
         <div class="input-container">
             <input type="text" id="user-input" placeholder="Mensaje" />
-            <button onclick="sendMessage()">Enviar</button>
+            <button onclick="sendMessage()"><img src="./send-icon.svg" alt="Botón Enviar"></button>
         </div>
     </div>    
     <script src="script.js"></script>
