--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Asistente Virtual MTEySS</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./assets/favicon.png" type="image/png">
-    <script src="./js/script.js" defer></script>
+    <script src="./js/script.js" type="module" defer></script>
 </head>
 <body>
     <div class="chat-container">
