button send fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="input-container">
             <input type="text" id="user-input" placeholder="Mensaje" />
-            <button onclick="sendMessage()"><img src="./assets/send-icon.svg" alt="Botón Enviar"></button>
+            <button id="send"><img src="./assets/send-icon.svg" alt="Botón Enviar"></button>
         </div>
     </div>    
 </body>
